<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="login_activity_label">Sinch Messaging Tutorial</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="title_activity_list_users">ListUsersActivity</string>
    <string name="message_elipses">Message...</string>
    <string name="logout">Logout</string>


    <string name="app_name">Incident_Command_Center</string>

    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">Message Users</string>
    <string name="title_section4">Message Commander</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter a username, password and email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="error_external_storage">There was a problem asscesing your device\'s external storage</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="fragment_A">this is fragment A</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_file_size_warning">The selected video must be less than 10 MB</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="error_selecting_file_title">We\'re sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again</string>

    <string-array name="drawer_list">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re sorry</string>
    <string name="title_activity_inbox_activity">inbox_activity</string>
    <string name="title_activity_friends_activity">friends_activity</string>
    <string name="menu_camera_label">Camera</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="title_activity_view_image">ViewImageActivity</string>

    <string name="List_user_error">display Error Message</string>
    <string name="title_activity_messaging">MessagingActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_send">Send</string>
    <string name="commander_text">Enter text which you wish to be sent to commander.</string>
    <string name="commander_hint">input text here</string>
    <string name="GPS_location">Show GPS Coordinates</string>
    <string name="title_activity_open_layers_map">openLayersMap</string>
    <string name ="push_message">You have a new media message from </string>


</resources>