<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_below="@+id/linearLayout3"
                android:layout_height="match_parent"
                tools:context="com.sinch.messagingtutorial.app.Messaging.Commander">




    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:id="@+id/send_button"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/commander_text"
        android:id="@+id/textView"
        android:layout_gravity="left|top"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textIsSelectable="true"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GPS_location"
        android:id="@+id/GPS_Button"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_above="@+id/send_button"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:id="@+id/incident_message"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/commander_hint"
        android:maxLength="9999"/>


</RelativeLayout>