<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.sinch.messagingtutorial.app.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/username"
            android:id="@+id/signUpUsernameText"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/sinch_purple"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/signUpUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="text"
            android:textSize="32sp"
            android:padding="10dp"
            android:textColor="@color/sinch_purple"
            android:background="@drawable/inputbox"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
            <requestFocus/>
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/password"
            android:id="@+id/signUpPasswordText"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/sinch_purple"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/signUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="40dp"
            android:inputType="textPassword"
            android:textSize="32sp"
            android:padding="10dp"
            android:textColor="@color/sinch_purple"
            android:background="@drawable/inputbox"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_hint"
            android:id="@+id/signUpEmailText"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/sinch_purple"
            android:textSize="20sp"
            android:layout_weight="0.11"/>
        <EditText
            android:id="@+id/signUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="40dp"
            android:inputType="textEmailAddress"
            android:textSize="32sp"
            android:padding="10dp"
            android:textColor="@color/sinch_purple"
            android:background="@drawable/inputbox"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
        </EditText>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center">

        </LinearLayout>

        <Button
            android:id="@+id/signupButton"
            android:background="@drawable/button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</RelativeLayout>
